# farba

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: 3d_cube.rs  fill_screen.rs  flag_of_japan.rs  rectangle.rs  triangle.rs
src/: canvas.rs  color.rs  lib.rs  math.rs  normal.rs
