[package]
name = "farba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
image = { version = "0.24.6", optional = true }

[[example]]
name = "fill_screen"
