[package]
name = "farba"
version = "0.1.1"
edition = "2021"
authors = ["Wowkster"]
description = "A CPU graphics library written in pure Rust"
license = "MIT"
repository = "https://github.com/wowkster/farba"
categories = ["graphics"]
keywords = ["farba", "graphics"]
readme = "README.md"
include = ["assets/", "examples/*.rs", "src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "farba"
crate-type = ["lib"]

[features]
default = []
image = ["dep:image"]
window = ["dep:minifb"]

[dependencies]
image = { version = "0.24.6", optional = true }
minifb = { version = "0.24.0", optional = true }

[[example]]
name = "fill_screen"
required-features = ["image"]

[[example]]
name = "flag_of_japan"
required-features = ["image"]

[[example]]
name = "rectangle"
required-features = ["image"]

[[example]]
name = "triangle"
required-features = ["image"]

[[example]]
name = "3d_cube"
required-features = []
